--- a/index.html
+++ b/index.html
@@ -211,6 +211,8 @@
                                     Affiliations:<br />
                                     <li class="fa-university"> <a href="">SLAC National Acceleratory Laboratory</a> </li>
                                     <li class="fa-university"> <a href="">Stanford University</a> </li>
+                                    <li class="fa-asterisk"> <a href="https://ml.slac.stanford.edu/">Machine Learning Initiative</a> </li>
+                                    <li class="fa-asterisk"> <a href="https://kipac.stanford.edu/">Kavli Institue for Particle Astrophysics and Cosmology (KIPAC)</a> </li>
                                     <br /><br />
                                     Previously:<br />
                                     <li class="fa-university"> <a href="">University of California, Berkeley</a> </li>
@@ -222,7 +224,7 @@
                                     Collaborations and Surveys:<br />
                                     <li class="fa-area-chart"> <a href="">SNFactory</a> </li>
                                     <li class="fa-area-chart"> <a href="">Supernova Cosmology Project</a> </li>
-                                    <li class="fa-area-chart"> <a href="">Cosmostatistics Initiative (COIN)</a> </li>
+                                    <li class="fa-bar-chart"> <a href="">Cosmostatistics Initiative (COIN)</a> </li>
                                     <li class="fa-star"> <a href="https://mwvgroup.github.io/SweetSpot/">SweetSpot Survey</a> </li>
                                     <li class="fa-hourglass-o"> <a href="https://www.lsst.org/">Vera C. Rubin's Legacy Survey of Space and Time</a> <br />
                                         <a href="http://www.lsst-desc.org/"> Dark Energy Science Collaboration</a>  </li>
