fixed typo, added little things

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 										<!-- <p>WEBSITE UNDER <br />
 										 CONSTRUCTION</p> -->
 									</header>
-									<p> I am currently a Research Associate in the Machine Learning Initiative at SLAC National Accelerator Laboratory. My focus is on preparing for the Vera C Rubin Observatory's Legacy Survey of Space and Time (LSST) in the feild of supernova cosmology. I am using machine learning and artificial intelligence to prepare for the 100,000s of transient alerts per night. As a pipeline scientist for the LSST Dark Energy Science Collaboration, I am preparing the analysis pipelines for the 10+ year lifetime of LSST. I am also helping to build a community of AI and ML at SLAC. <br /><br />
+									<p> I am currently a Research Associate in the Machine Learning Initiative at SLAC National Accelerator Laboratory. My focus is on preparing for the Vera C Rubin Observatory's Legacy Survey of Space and Time (LSST) in the field of supernova cosmology. I am using machine learning and artificial intelligence to prepare for the 100,000s of transient alerts per night. As a pipeline scientist for the LSST Dark Energy Science Collaboration, I am preparing the analysis pipelines for the 10+ year lifetime of LSST. I am also helping to build a community of AI and ML at SLAC. <br /><br />
 
                                     Previously, I was a postdoctoral researcher working at the Berkeley Center for Cosmological Physics as a Computational Data Science Fellow after graduating from the University of Pittsburgh with a PhD in Physics in 2017.
                                      I worked with Saul Perlmutter's group at UC Berkeley and LBNL on the Nearby Supernova Factory pipeline. <br /><br />
@@ -86,6 +86,7 @@
 									<h3>Experience</h3>
 									<!-- <p>any experience summary text</p> -->
 									<ul class="feature-icons">
+                                        <li class="fa-area-chart">Research Associate in the Machine Learning Initiative at SLAC</li>
                                         <li class="fa-area-chart">Berkeley Center for Cosmological Sciences Computational Data Scientist</li>
                                         <li class="fa-graduation-cap"> PhD and Master of Science in Physics:  University of Pittsburgh</li>
                                         <li class="fa-graduation-cap"> Bachelor of Science in Physics and Astronomy: University of Georgia</li>
@@ -150,9 +151,10 @@
                                         <article>
 											<a href="http://www.lsst-desc.org/" class="image"><img src="images/LSST-DESC-logo.png" alt="" /></a>
 											<div class="inner">
-												<h4>Member of the Large Synoptic Survey Telescope (LSST) Dark Energy Science Collaboration (DESC)</h4>
+												<h4>Member of the Vera C. Rubin Observatory Legacy Survey of Space and Time (LSST) Dark Energy Science Collaboration (DESC)</h4>
 												<p>Member of Supernova working group <br />
-                                                2015-2017: member of Collaboration Council</p>
+                                                Co-lead of the Supernova Machine learning Topical Team <br />
+                                                2015-2017, 2018-2020: member of Collaboration Council</p>
 											</div>
 										</article>
 										<article>
