--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
 				<header>
 					<span class="image avatar"><img src="images/20190920_kp_pic.jpg" alt="" /></span>
 					<h1 id="logo"><a href="#">Kara A. Ponder</a></h1>
-					<p>Research Associate<br />
-                    Machine Learning Initiative <br />
-					SLAC National Accelerator Laboratory</p>
+					<p>Senior Data Scientist<br />
+                    Noodle Analytics </p>
 				</header>
 				<nav id="nav">
 					<ul>
@@ -59,12 +58,15 @@
 								<div class="container">
 									<header class="major">
 										<h2>Kara A. Ponder</h2>
-										<!-- <p>WEBSITE UNDER <br />
-										 CONSTRUCTION</p> -->
+										 <p>WEBSITE UNDER <br />
+										 (RE)CONSTRUCTION</p> 
 									</header>
-									<p> I am currently a Research Associate in the Machine Learning Initiative at SLAC National Accelerator Laboratory. My focus is on preparing for the Vera C Rubin Observatory's Legacy Survey of Space and Time (LSST) in the field of supernova cosmology. I am using machine learning and artificial intelligence to prepare for the 100,000s of transient alerts per night. As a pipeline scientist for the LSST Dark Energy Science Collaboration (DESC), I am preparing the analysis pipelines for the 10+ year lifetime of LSST. I recently started and am currently leading the Supernova Machine Learning Topical Team in DESC to provide a space to discuss projects and new ideas for applications of ML to supernova cosmology. I am also helping to build a community of AI and ML at SLAC. <br /><br />
+                                    <p> I am interested in harnessing Artificial Intelligence to make the world a better place. I am currently a Senior Data Scientist at Noodle Analytics. <br /><br />
 
-                                    Previously, I was a postdoctoral researcher working at the Berkeley Center for Cosmological Physics as a Computational Data Science Fellow after graduating from the University of Pittsburgh with a PhD in Physics in 2017.
+                                    
+                                    Previously, I was a Research Associate in the Machine Learning Initiative at SLAC National Accelerator Laboratory. My focus is on preparing for the Vera C Rubin Observatory's Legacy Survey of Space and Time (LSST) in the field of supernova cosmology. I am using machine learning and artificial intelligence to prepare for the 100,000s of transient alerts per night. As a pipeline scientist for the LSST Dark Energy Science Collaboration (DESC), I am preparing the analysis pipelines for the 10+ year lifetime of LSST. I recently started and am currently leading the Supernova Machine Learning Topical Team in DESC to provide a space to discuss projects and new ideas for applications of ML to supernova cosmology. I am also helping to build a community of AI and ML at SLAC. <br /><br />
+
+                                    I was a postdoctoral researcher working at the Berkeley Center for Cosmological Physics as a Computational Data Science Fellow after graduating from the University of Pittsburgh with a PhD in Physics in 2017.
                                      I worked with Saul Perlmutter's group at UC Berkeley and LBNL on the Nearby Supernova Factory pipeline. <br /><br />
 
                                     My research goals are understanding host galaxy correlations with supernovae for cosmology.
