added new highlights and rephrased research

--- a/index.html
+++ b/index.html
@@ -58,23 +58,21 @@
 								<div class="container">
 									<header class="major">
 										<h2>Kara A. Ponder</h2>
-										 <p>WEBSITE UNDER <br />
-										 (RE)CONSTRUCTION</p> 
 									</header>
-                                    <p> I am interested in harnessing Artificial Intelligence to make the world a better place. I am currently a Senior Data Scientist at Noodle Analytics. <br /><br />
+                                    <p> I am interested in harnessing Artificial Intelligence to make the world a better place. I am currently a Senior Data Scientist at <a href="https://noodle.ai/">Noodle Analytics</a>. Noodle works with other business using FlowOps to improve quality of manufactoring and improve supply chain flow in inventory. <br /><br />
 
                                     
-                                    Previously, I was a Research Associate in the Machine Learning Initiative at SLAC National Accelerator Laboratory. My focus is on preparing for the Vera C Rubin Observatory's Legacy Survey of Space and Time (LSST) in the field of supernova cosmology. I am using machine learning and artificial intelligence to prepare for the 100,000s of transient alerts per night. As a pipeline scientist for the LSST Dark Energy Science Collaboration (DESC), I am preparing the analysis pipelines for the 10+ year lifetime of LSST. I recently started and am currently leading the Supernova Machine Learning Topical Team in DESC to provide a space to discuss projects and new ideas for applications of ML to supernova cosmology. I am also helping to build a community of AI and ML at SLAC. <br /><br />
+                                    Previously, I was a Research Associate in the Machine Learning Initiative at SLAC National Accelerator Laboratory. I focused on preparing for the Vera C Rubin Observatory's Legacy Survey of Space and Time (LSST) in the field of supernova cosmology. I used machine learning and artificial intelligence to prepare for the 100,000s of transient alerts per night. As a pipeline scientist for the LSST Dark Energy Science Collaboration (DESC), I helped to prepare the analysis pipelines for the 10+ year lifetime of LSST. I started and was leading the Supernova Machine Learning Topical Team in DESC to provide a space to discuss projects and new ideas for applications of ML to supernova cosmology. <br /><br />
 
-                                    I was a postdoctoral researcher working at the Berkeley Center for Cosmological Physics as a Computational Data Science Fellow after graduating from the University of Pittsburgh with a PhD in Physics in 2017.
+                                    Before SLAC, I was a postdoctoral researcher working at the Berkeley Center for Cosmological Physics as a Computational Data Science Fellow after graduating from the University of Pittsburgh with a PhD in Physics in 2017.
                                      I worked with Saul Perlmutter's group at UC Berkeley and LBNL on the Nearby Supernova Factory pipeline. <br /><br />
 
-                                    My research goals are understanding host galaxy correlations with supernovae for cosmology.
-                                    I have explored ways to improve parameter estimation with the likelihood function motivated by this correlation.
-                                    I am also exploring these correlations with NIR data obtained in the SweetSpot survey, which I was the lead graduate student for from 2014 to 2017.  I have taken IFU
+                                    As a graduate student at the University of Pittsburgh, my research goals were understanding host galaxy correlations with supernovae for cosmology.
+                                    I explored ways to improve parameter estimation with the likelihood function motivated by this correlation.
+                                    I complimented other research of these correlations with NIR data, which I obtained in the SweetSpot survey that I was the lead graduate student for from 2014 to 2017. <!-- I have taken IFU
                                     spectra of host galaxies and am leading that data reduction. I will be analyzing the resulting correlations
                                     and incorporating them into likelihood functions for cosmology to be used for large scale surveys such as the LSST
-                                    and the Wide Field Infrared Survey Telescope  (WFIRST). <br />
+                                    and the Wide Field Infrared Survey Telescope  (WFIRST).--> <br />
                                      <br />
 
                                     <!-- Here is my <a href="Ponder_Kara_CV.pdf">CV</a>.-->
@@ -92,7 +90,7 @@
                                         <li class="fa-area-chart">Berkeley Center for Cosmological Sciences Computational Data Scientist</li>
                                         <li class="fa-graduation-cap"> PhD and Master of Science in Physics:  University of Pittsburgh</li>
                                         <li class="fa-graduation-cap"> Bachelor of Science in Physics and Astronomy: University of Georgia</li>
-                                        <li class="fa-code"> Coding: Python, C++, PyRAF/IRAF, emcee, AstroPy, Django </li>
+                                        <li class="fa-code"> Coding: Python, C++, pandas, sklearn, matplotlib, R, emcee, Django, PyRAF/IRAF, AstroPy, Django </li>
 										<!--<li class="fa-file">List of <a href="https://arxiv.org/search/advanced?advanced=&terms-0-operator=AND&terms-0-term=%22Ponder%2C+K+A%22&terms-0-field=author&terms-1-operator=OR&terms-1-term=%22Ponder%2C+Kara%22&terms-1-field=author&terms-2-operator=OR&terms-2-term=%22Ponder%2C+Kara+A%22&terms-2-field=author&terms-3-operator=OR&terms-3-term=%22Ponder%2C+Kara+Ann%22&terms-3-field=author&classification-physics=y&classification-physics_archives=all&date-filter_by=all_dates&date-year=&date-from_date=&date-to_date=&size=50&order=">arXiv</a> papers.</li>-->
                                         <li class="fa-sort-amount-desc">Bayesian/Hierarchical Bayesian analyses</li>
                                         <li class="fa-superscript">Dark Energy Parameter estimation </li>
@@ -110,13 +108,29 @@
 									<!-- <p> summary of accomplishments.</p> -->
 									<div class="features">
                                         <article>
-                                            <a href="" class="image"><img src="images/plasticc_valid.jpg" alt="" /></a>
+                                            <a href="https://arxiv.org/abs/2006.13803" class="image"><img src="images/Fit_Results_mass_H.jpg" alt="" /></a>
+                                            <div class="inner">
+                                                <h4> Are Type Ia Supernovae in Restframe H Brighter in More Massive Galaxies?</h4>
+                                                <p> <a href="https://arxiv.org/abs/2006.13803"> The Astrophysical Journal, Volume 923, Issue 2, id.197, 34 pp. (2021) </a>. This was my final first author paper. The plot shows the results of exploring correlations between host galaxy properties and supernovae observed in the NIR. We found evidence of a correlation between host galaxy mass and the brightness of the NIR-observed supernovae; however, the statistical significance of these correlations is at the 2-sigma level.
+                                                </p>
+                                            </div>
+                                        </article>
+                                        <article>
+                                            <a href="https://arxiv.org/abs/2010.05941" class="image"><img src="images/metric2.png" alt="" /></a>
+                                            <div class="inner">
+                                                <h4> RESSPECT: Recommendation System for Spectroscopic Follow-up </h4>
+                                                <p> This project uses active learning to make recommendations for which objects to spectroscopically classify given a limited number of telescope time verus the onslaught of possible targets that will come from LSST. The methods for the machine learning part of the active learning loop were published in <a href="https://arxiv.org/abs/2010.05941"> Kennamer et al (2020) </a>. I worked towards adding a cosmology-based metric to optimize cosmological constraints given possible follow up targets. The probabilty of classification, telescope availability, and this cosmology metric will be used to recommend spectroscopic follow up targets. Stay tuned for more papers from this project!
+                                                </p>
+                                            </div>
+                                        </article>
+                                        <article>
+                                            <a href="https://arxiv.org/abs/2012.12392" class="image"><img src="images/plasticc_valid.jpg" alt="" /></a>
                                             <div class="inner">
                                                 <h4> Photometric LSST Astronomical Time-Series Classification Challenge (PLAsTiCC)</h4>
                                                 <p><a href="https://plasticc.org/"> PLAsTiCC </a> was a machine learning challenge hosted at
                                                  <a href="https://www.kaggle.com/c/PLAsTiCC-2018"> Kaggle </a> with the aim to classify millions of
                                                  lightcurves with a small, unrepresentative training set. I helped validate the simulations so that
-                                                 this competition could be leak free!
+                                                 this competition could be leak free! I was also second author on the <a href="https://arxiv.org/abs/2012.12392"> paper</a> analysing the winning solutions.
                                                 </p>
                                             </div>
                                         </article>
@@ -212,20 +226,18 @@
                                     <a href="https://scholar.google.com/citations?user=D-PUvKoAAAAJ&hl=en"><i class="ai ai-google-scholar ai-3x"></i></a>
                                     </div>
                                     <br /><br />
-                                    Affiliations:<br />
+                                    Previous Affiliations:<br />
                                     <li class="fa-university"> <a href="">SLAC National Acceleratory Laboratory</a> </li>
                                     <li class="fa-university"> <a href="">Stanford University</a> </li>
                                     <li class="fa-asterisk"> <a href="https://ml.slac.stanford.edu/">Machine Learning Initiative</a> </li>
                                     <li class="fa-asterisk"> <a href="https://kipac.stanford.edu/">Kavli Institue for Particle Astrophysics and Cosmology (KIPAC)</a> </li>
-                                    <br /><br />
-                                    Previously:<br />
                                     <li class="fa-university"> <a href="">University of California, Berkeley</a> </li>
                                     <li class="fa-asterisk"> <a href="bccp.berkeley.edu">Berkeley Center for Cosmological Physics (BCCP)</a> </li>
                                     <li class="fa-asterisk"> <a href="">Lawrence Berkeley National Laboratory </a> </li>
                                     <li class="fa-university"> <a href="http://www.physicsandastronomy.pitt.edu/">University of Pittsburgh</a> </li>
                                     <li class="fa-asterisk"> <a href="http://www.physicsandastronomy.pitt.edu/pittpacc">Pittsburgh Particle, Astrophysics, and Cosmology Center (Pitt PACC)</a> </li>
                                     <br /><br />
-                                    Collaborations and Surveys:<br />
+                                    Previous Collaborations and Surveys:<br />
                                     <li class="fa-area-chart"> <a href="">SNFactory</a> </li>
                                     <li class="fa-area-chart"> <a href="">Supernova Cosmology Project</a> </li>
                                     <li class="fa-bar-chart"> <a href="">Cosmostatistics Initiative (COIN)</a> </li>
