Changed email, update format

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 						<!-- <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>-->
 						<!-- <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li> -->
 						<!-- <li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>-->
-                        <li><a href="mailto:kap146@slac.stanford.edu" class="icon fa-envelope"><span class="label">Email</span></a></li>
+                        <li><a href="mailto:karaponder1@gmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
 						<li><a href="https://github.com/kponder" class="icon fa-github"><span class="label">Github</span></a></li>
                         <li><a href="https://www.linkedin.com/in/karaponder1" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 					</ul>
@@ -64,15 +64,10 @@
                                     
                                     Previously, I was a Research Associate in the Machine Learning Initiative at SLAC National Accelerator Laboratory. I focused on preparing for the Vera C Rubin Observatory's Legacy Survey of Space and Time (LSST) in the field of supernova cosmology. I used machine learning and artificial intelligence to prepare for the 100,000s of transient alerts per night. As a pipeline scientist for the LSST Dark Energy Science Collaboration (DESC), I helped to prepare the analysis pipelines for the 10+ year lifetime of LSST. I started and was leading the Supernova Machine Learning Topical Team in DESC to provide a space to discuss projects and new ideas for applications of ML to supernova cosmology. <br /><br />
 
-                                    Before SLAC, I was a postdoctoral researcher working at the Berkeley Center for Cosmological Physics as a Computational Data Science Fellow after graduating from the University of Pittsburgh with a PhD in Physics in 2017.
-                                     I worked with Saul Perlmutter's group at UC Berkeley and LBNL on the Nearby Supernova Factory pipeline. <br /><br />
+                                    Before SLAC, I was a postdoctoral researcher working at the Berkeley Center for Cosmological Physics as a Computational Data Science Fellow after graduating from the University of Pittsburgh with a PhD in Physics in 2017. I worked with Saul Perlmutter's group at UC Berkeley and LBNL on the Nearby Supernova Factory pipeline. <br /><br />
 
-                                    As a graduate student at the University of Pittsburgh, my research goals were understanding host galaxy correlations with supernovae for cosmology.
-                                    I explored ways to improve parameter estimation with the likelihood function motivated by this correlation.
-                                    I complimented other research of these correlations with NIR data, which I obtained in the SweetSpot survey that I was the lead graduate student for from 2014 to 2017. <!-- I have taken IFU
-                                    spectra of host galaxies and am leading that data reduction. I will be analyzing the resulting correlations
-                                    and incorporating them into likelihood functions for cosmology to be used for large scale surveys such as the LSST
-                                    and the Wide Field Infrared Survey Telescope  (WFIRST).--> <br />
+                                    As a graduate student at the University of Pittsburgh, my research goals were understanding host galaxy correlations with supernovae for cosmology. I explored ways to improve parameter estimation with the likelihood function motivated by this correlation. I complimented other research of these correlations with NIR data, which I obtained in the SweetSpot survey that I was the lead graduate student for from 2014 to 2017. <!-- I have taken IFU spectra of host galaxies and am leading that data reduction. I will be analyzing the resulting correlations and incorporating them into likelihood functions for cosmology to be used for large scale surveys such as the LSST and the Wide Field Infrared Survey Telescope  (WFIRST).--> 
+					    <br />
                                      <br />
 
                                     <!-- Here is my <a href="Ponder_Kara_CV.pdf">CV</a>.-->
@@ -91,7 +86,6 @@
                                         <li class="fa-graduation-cap"> PhD and Master of Science in Physics:  University of Pittsburgh</li>
                                         <li class="fa-graduation-cap"> Bachelor of Science in Physics and Astronomy: University of Georgia</li>
                                         <li class="fa-code"> Coding: Python, C++, pandas, sklearn, matplotlib, R, emcee, Django, PyRAF/IRAF, AstroPy, Django </li>
-										<!--<li class="fa-file">List of <a href="https://arxiv.org/search/advanced?advanced=&terms-0-operator=AND&terms-0-term=%22Ponder%2C+K+A%22&terms-0-field=author&terms-1-operator=OR&terms-1-term=%22Ponder%2C+Kara%22&terms-1-field=author&terms-2-operator=OR&terms-2-term=%22Ponder%2C+Kara+A%22&terms-2-field=author&terms-3-operator=OR&terms-3-term=%22Ponder%2C+Kara+Ann%22&terms-3-field=author&classification-physics=y&classification-physics_archives=all&date-filter_by=all_dates&date-year=&date-from_date=&date-to_date=&size=50&order=">arXiv</a> papers.</li>-->
                                         <li class="fa-sort-amount-desc">Bayesian/Hierarchical Bayesian analyses</li>
                                         <li class="fa-superscript">Dark Energy Parameter estimation </li>
                                         <li class="fa-star">NIR Photometric Light curves of SNeIa for the <a href="https://mwvgroup.github.io/SweetSpot/">SweetSpot Survey</a> </li>
@@ -227,24 +221,24 @@
                                     </div>
                                     <br /><br />
                                     Previous Affiliations:<br />
-                                    <li class="fa-university"> <a href="">SLAC National Acceleratory Laboratory</a> </li>
-                                    <li class="fa-university"> <a href="">Stanford University</a> </li>
-                                    <li class="fa-asterisk"> <a href="https://ml.slac.stanford.edu/">Machine Learning Initiative</a> </li>
-                                    <li class="fa-asterisk"> <a href="https://kipac.stanford.edu/">Kavli Institue for Particle Astrophysics and Cosmology (KIPAC)</a> </li>
-                                    <li class="fa-university"> <a href="">University of California, Berkeley</a> </li>
-                                    <li class="fa-asterisk"> <a href="bccp.berkeley.edu">Berkeley Center for Cosmological Physics (BCCP)</a> </li>
-                                    <li class="fa-asterisk"> <a href="">Lawrence Berkeley National Laboratory </a> </li>
-                                    <li class="fa-university"> <a href="http://www.physicsandastronomy.pitt.edu/">University of Pittsburgh</a> </li>
-                                    <li class="fa-asterisk"> <a href="http://www.physicsandastronomy.pitt.edu/pittpacc">Pittsburgh Particle, Astrophysics, and Cosmology Center (Pitt PACC)</a> </li>
+					<li class="fa-university"> <a href="">SLAC National Acceleratory Laboratory</a> </li>
+                                        <li class="fa-university"> <a href="">Stanford University</a> </li>
+                                        <li class="fa-asterisk"> <a href="https://ml.slac.stanford.edu/">Machine Learning Initiative</a> </li>
+                                        <li class="fa-asterisk"> <a href="https://kipac.stanford.edu/">Kavli Institue for Particle Astrophysics and Cosmology (KIPAC)</a> </li>
+                                        <li class="fa-university"> <a href="">University of California, Berkeley</a> </li>
+                                        <li class="fa-asterisk"> <a href="bccp.berkeley.edu">Berkeley Center for Cosmological Physics (BCCP)</a> </li>
+                                        <li class="fa-asterisk"> <a href="">Lawrence Berkeley National Laboratory </a> </li>
+                                        <li class="fa-university"> <a href="http://www.physicsandastronomy.pitt.edu/">University of Pittsburgh</a> </li>
+                                        <li class="fa-asterisk"> <a href="http://www.physicsandastronomy.pitt.edu/pittpacc">Pittsburgh Particle, Astrophysics, and Cosmology Center (Pitt PACC)</a> </li>
                                     <br /><br />
                                     Previous Collaborations and Surveys:<br />
-                                    <li class="fa-area-chart"> <a href="">SNFactory</a> </li>
-                                    <li class="fa-area-chart"> <a href="">Supernova Cosmology Project</a> </li>
-                                    <li class="fa-bar-chart"> <a href="">Cosmostatistics Initiative (COIN)</a> </li>
-                                    <li class="fa-star"> <a href="https://mwvgroup.github.io/SweetSpot/">SweetSpot Survey</a> </li>
-                                    <li class="fa-hourglass-o"> <a href="https://www.lsst.org/">Vera C. Rubin's Legacy Survey of Space and Time</a> <br />
+					<li class="fa-area-chart"> <a href="">SNFactory</a> </li>
+                                        <li class="fa-area-chart"> <a href="">Supernova Cosmology Project</a> </li>
+                                        <li class="fa-bar-chart"> <a href="">Cosmostatistics Initiative (COIN)</a> </li>
+                                        <li class="fa-star"> <a href="https://mwvgroup.github.io/SweetSpot/">SweetSpot Survey</a> </li>
+                                        <li class="fa-hourglass-o"> <a href="https://www.lsst.org/">Vera C. Rubin's Legacy Survey of Space and Time</a> <br />
                                         <a href="http://www.lsst-desc.org/"> Dark Energy Science Collaboration</a>  </li>
-                                    <li class="fa-smile-o"> <a href="http://adsabs.harvard.edu/cgi-bin/bib_query?arXiv:1511.01495"> All-weather MUse Supernova Integral field Nearby Galaxies (AMUSING) survey </a> </li>
+                                        <li class="fa-smile-o"> <a href="http://adsabs.harvard.edu/cgi-bin/bib_query?arXiv:1511.01495"> All-weather MUse Supernova Integral field Nearby Galaxies (AMUSING) survey </a> </li>
                                     <br /><br /><br /><br />
                                     To email me, click the envelope on the side bar!
                                     <br /><br /><br /><br /><br /><br />
